--- a/report/index.html
+++ b/report/index.html
@@ -32,7 +32,7 @@
     <span class="report-headline"></span> 
     <!-- nav-right --> 
     <ul id="nav-mobile" class="right hide-on-med-and-down nav-right"> 
-     <li> <a href="#!"> <span class="label suite-start-time blue darken-3">Jul 3, 2021 05:49:43 PM</span> </a> </li> 
+     <li> <a href="#!"> <span class="label suite-start-time blue darken-3">Jul 8, 2021 05:13:22 PM</span> </a> </li> 
      <li> <a href="#!"> <span class="label blue darken-3">3.1.5</span> </a> </li> 
     </ul> 
    </div> 
@@ -85,7 +85,7 @@
          <canvas id="parent-analysis" width="100" height="80"></canvas> 
         </div> 
         <div class="block text-small"> 
-         <span class="tooltipped" data-position="top" data-tooltip="100%"><span class="strong">4</span> test(s) passed</span> 
+         <span class="tooltipped" data-position="top" data-tooltip="100%"><span class="strong">5</span> test(s) passed</span> 
         </div> 
         <div class="block text-small"> 
          <span class="strong tooltipped" data-position="top" data-tooltip="0%">0</span> test(s) failed, 
@@ -102,7 +102,7 @@
          <canvas id="child-analysis" width="100" height="80"></canvas> 
         </div> 
         <div class="block text-small"> 
-         <span class="tooltipped" data-position="top" data-tooltip="100%"><span class="strong">4</span> step(s) passed</span> 
+         <span class="tooltipped" data-position="top" data-tooltip="100%"><span class="strong">5</span> step(s) passed</span> 
         </div> 
         <div class="block text-small"> 
          <span class="strong tooltipped" data-position="top" data-tooltip="0%">0</span> step(s) failed, 
@@ -118,15 +118,15 @@
       <ul id="test-collection" class="test-collection"> 
        <li class="test displayed active  pass" status="pass" bdd="false" test-id="1"> 
         <div class="test-heading"> 
-         <span class="test-name">18888888816123456</span> 
-         <span class="test-time">Jul 3, 2021 05:49:43 PM</span> 
+         <span class="test-name">3-1-1。在登陆页通过账号密码正常登陆</span> 
+         <span class="test-time">Jul 8, 2021 05:13:22 PM</span> 
          <span class="test-status right pass">pass</span> 
         </div> 
         <div class="test-content hide"> 
          <div class="test-time-info"> 
-          <span class="label start-time">Jul 3, 2021 05:49:43 PM</span> 
-          <span class="label end-time">Jul 3, 2021 05:49:56 PM</span> 
-          <span class="label time-taken grey lighten-1 white-text">0h 0m 12s+680ms</span> 
+          <span class="label start-time">Jul 8, 2021 05:13:22 PM</span> 
+          <span class="label end-time">Jul 8, 2021 05:13:35 PM</span> 
+          <span class="label time-taken grey lighten-1 white-text">0h 0m 13s+562ms</span> 
          </div> 
          <div class="test-steps"> 
           <table class="bordered table-results"> 
@@ -140,17 +140,17 @@
            <tbody> 
             <tr class="log" status="debug"> 
              <td class="status debug" title="debug" alt="debug"><i class="material-icons">low_priority</i></td> 
-             <td class="timestamp">5:50:18 PM</td> 
+             <td class="timestamp">5:15:41 PM</td> 
              <td class="step-details">test001_loginHappyFlow Started</td> 
             </tr> 
             <tr class="log" status="debug"> 
              <td class="status debug" title="debug" alt="debug"><i class="material-icons">low_priority</i></td> 
-             <td class="timestamp">5:50:18 PM</td> 
+             <td class="timestamp">5:15:41 PM</td> 
              <td class="step-details">test001_loginHappyFlow Success</td> 
             </tr> 
             <tr class="log" status="pass"> 
              <td class="status pass" title="pass" alt="pass"><i class="material-icons">check_circle</i></td> 
-             <td class="timestamp">5:50:18 PM</td> 
+             <td class="timestamp">5:15:41 PM</td> 
              <td class="step-details">Test passed</td> 
             </tr> 
            </tbody> 
@@ -159,15 +159,15 @@
         </div> </li> 
        <li class="test displayed active  pass" status="pass" bdd="false" test-id="2"> 
         <div class="test-heading"> 
-         <span class="test-name">2。发起音频会议至会议启动页</span> 
-         <span class="test-time">Jul 3, 2021 05:49:56 PM</span> 
+         <span class="test-name">3-1-2。发起音频会议至会议启动页</span> 
+         <span class="test-time">Jul 8, 2021 05:13:35 PM</span> 
          <span class="test-status right pass">pass</span> 
         </div> 
         <div class="test-content hide"> 
          <div class="test-time-info"> 
-          <span class="label start-time">Jul 3, 2021 05:49:56 PM</span> 
-          <span class="label end-time">Jul 3, 2021 05:50:05 PM</span> 
-          <span class="label time-taken grey lighten-1 white-text">0h 0m 9s+269ms</span> 
+          <span class="label start-time">Jul 8, 2021 05:13:35 PM</span> 
+          <span class="label end-time">Jul 8, 2021 05:13:45 PM</span> 
+          <span class="label time-taken grey lighten-1 white-text">0h 0m 9s+937ms</span> 
          </div> 
          <div class="test-steps"> 
           <table class="bordered table-results"> 
@@ -181,17 +181,17 @@
            <tbody> 
             <tr class="log" status="debug"> 
              <td class="status debug" title="debug" alt="debug"><i class="material-icons">low_priority</i></td> 
-             <td class="timestamp">5:50:18 PM</td> 
+             <td class="timestamp">5:15:41 PM</td> 
              <td class="step-details">test002_startAudioMeeting Started</td> 
             </tr> 
             <tr class="log" status="debug"> 
              <td class="status debug" title="debug" alt="debug"><i class="material-icons">low_priority</i></td> 
-             <td class="timestamp">5:50:18 PM</td> 
+             <td class="timestamp">5:15:41 PM</td> 
              <td class="step-details">test002_startAudioMeeting Success</td> 
             </tr> 
             <tr class="log" status="pass"> 
              <td class="status pass" title="pass" alt="pass"><i class="material-icons">check_circle</i></td> 
-             <td class="timestamp">5:50:18 PM</td> 
+             <td class="timestamp">5:15:41 PM</td> 
              <td class="step-details">Test passed</td> 
             </tr> 
            </tbody> 
@@ -200,15 +200,15 @@
         </div> </li> 
        <li class="test displayed active  pass" status="pass" bdd="false" test-id="3"> 
         <div class="test-heading"> 
-         <span class="test-name">3。音频会议启动页发起音视频</span> 
-         <span class="test-time">Jul 3, 2021 05:50:05 PM</span> 
+         <span class="test-name">3-1-3。音频会议启动页发起音视频</span> 
+         <span class="test-time">Jul 8, 2021 05:13:45 PM</span> 
          <span class="test-status right pass">pass</span> 
         </div> 
         <div class="test-content hide"> 
          <div class="test-time-info"> 
-          <span class="label start-time">Jul 3, 2021 05:50:05 PM</span> 
-          <span class="label end-time">Jul 3, 2021 05:50:18 PM</span> 
-          <span class="label time-taken grey lighten-1 white-text">0h 0m 12s+752ms</span> 
+          <span class="label start-time">Jul 8, 2021 05:13:45 PM</span> 
+          <span class="label end-time">Jul 8, 2021 05:13:57 PM</span> 
+          <span class="label time-taken grey lighten-1 white-text">0h 0m 11s+721ms</span> 
          </div> 
          <div class="test-steps"> 
           <table class="bordered table-results"> 
@@ -222,17 +222,17 @@
            <tbody> 
             <tr class="log" status="debug"> 
              <td class="status debug" title="debug" alt="debug"><i class="material-icons">low_priority</i></td> 
-             <td class="timestamp">5:50:18 PM</td> 
+             <td class="timestamp">5:15:41 PM</td> 
              <td class="step-details">test003_startAudioMeeting Started</td> 
             </tr> 
             <tr class="log" status="debug"> 
              <td class="status debug" title="debug" alt="debug"><i class="material-icons">low_priority</i></td> 
-             <td class="timestamp">5:50:18 PM</td> 
+             <td class="timestamp">5:15:41 PM</td> 
              <td class="step-details">test003_startAudioMeeting Success</td> 
             </tr> 
             <tr class="log" status="pass"> 
              <td class="status pass" title="pass" alt="pass"><i class="material-icons">check_circle</i></td> 
-             <td class="timestamp">5:50:18 PM</td> 
+             <td class="timestamp">5:15:41 PM</td> 
              <td class="step-details">Test passed</td> 
             </tr> 
            </tbody> 
@@ -241,15 +241,15 @@
         </div> </li> 
        <li class="test displayed active  pass" status="pass" bdd="false" test-id="4"> 
         <div class="test-heading"> 
-         <span class="test-name">4. 音频会议中的按钮检验</span> 
-         <span class="test-time">Jul 3, 2021 05:50:18 PM</span> 
+         <span class="test-name">3-1-4-1. 音频会议中的按钮检验,直至退出会议到消息首页</span> 
+         <span class="test-time">Jul 8, 2021 05:13:57 PM</span> 
          <span class="test-status right pass">pass</span> 
         </div> 
         <div class="test-content hide"> 
          <div class="test-time-info"> 
-          <span class="label start-time">Jul 3, 2021 05:50:18 PM</span> 
-          <span class="label end-time">Jul 3, 2021 05:50:18 PM</span> 
-          <span class="label time-taken grey lighten-1 white-text">0h 0m 0s+11ms</span> 
+          <span class="label start-time">Jul 8, 2021 05:13:57 PM</span> 
+          <span class="label end-time">Jul 8, 2021 05:15:26 PM</span> 
+          <span class="label time-taken grey lighten-1 white-text">0h 1m 29s+52ms</span> 
          </div> 
          <div class="test-steps"> 
           <table class="bordered table-results"> 
@@ -263,17 +263,58 @@
            <tbody> 
             <tr class="log" status="debug"> 
              <td class="status debug" title="debug" alt="debug"><i class="material-icons">low_priority</i></td> 
-             <td class="timestamp">5:50:18 PM</td> 
+             <td class="timestamp">5:15:41 PM</td> 
              <td class="step-details">test004_inAudioMeeting Started</td> 
             </tr> 
             <tr class="log" status="debug"> 
              <td class="status debug" title="debug" alt="debug"><i class="material-icons">low_priority</i></td> 
-             <td class="timestamp">5:50:18 PM</td> 
+             <td class="timestamp">5:15:41 PM</td> 
              <td class="step-details">test004_inAudioMeeting Success</td> 
             </tr> 
             <tr class="log" status="pass"> 
              <td class="status pass" title="pass" alt="pass"><i class="material-icons">check_circle</i></td> 
-             <td class="timestamp">5:50:18 PM</td> 
+             <td class="timestamp">5:15:41 PM</td> 
+             <td class="step-details">Test passed</td> 
+            </tr> 
+           </tbody> 
+          </table> 
+         </div> 
+        </div> </li> 
+       <li class="test displayed active  pass" status="pass" bdd="false" test-id="5"> 
+        <div class="test-heading"> 
+         <span class="test-name">3-1-5. 从首页进去音视频会议， 并结束会议，返回信息首页</span> 
+         <span class="test-time">Jul 8, 2021 05:15:26 PM</span> 
+         <span class="test-status right pass">pass</span> 
+        </div> 
+        <div class="test-content hide"> 
+         <div class="test-time-info"> 
+          <span class="label start-time">Jul 8, 2021 05:15:26 PM</span> 
+          <span class="label end-time">Jul 8, 2021 05:15:40 PM</span> 
+          <span class="label time-taken grey lighten-1 white-text">0h 0m 13s+966ms</span> 
+         </div> 
+         <div class="test-steps"> 
+          <table class="bordered table-results"> 
+           <thead> 
+            <tr> 
+             <th>Status</th> 
+             <th>Timestamp</th> 
+             <th>Details</th> 
+            </tr> 
+           </thead> 
+           <tbody> 
+            <tr class="log" status="debug"> 
+             <td class="status debug" title="debug" alt="debug"><i class="material-icons">low_priority</i></td> 
+             <td class="timestamp">5:15:41 PM</td> 
+             <td class="step-details">test005_audioMeetingInAndClose Started</td> 
+            </tr> 
+            <tr class="log" status="debug"> 
+             <td class="status debug" title="debug" alt="debug"><i class="material-icons">low_priority</i></td> 
+             <td class="timestamp">5:15:41 PM</td> 
+             <td class="step-details">test005_audioMeetingInAndClose Success</td> 
+            </tr> 
+            <tr class="log" status="pass"> 
+             <td class="status pass" title="pass" alt="pass"><i class="material-icons">check_circle</i></td> 
+             <td class="timestamp">5:15:41 PM</td> 
              <td class="step-details">Test passed</td> 
             </tr> 
            </tbody> 
@@ -312,7 +353,7 @@
        <div class="card-panel r">
          Tests 
         <div class="panel-lead">
-         4
+         5
         </div> 
        </div> 
       </div> 
@@ -320,7 +361,7 @@
        <div class="card-panel r">
          Steps 
         <div class="panel-lead">
-         4
+         5
         </div> 
        </div> 
       </div> 
@@ -328,7 +369,7 @@
        <div class="card-panel r">
          Start 
         <div class="panel-lead">
-         Jul 3, 2021 05:49:43 PM
+         Jul 8, 2021 05:13:22 PM
         </div> 
        </div> 
       </div> 
@@ -336,7 +377,7 @@
        <div class="card-panel r">
          End 
         <div class="panel-lead">
-         Jul 3, 2021 05:50:18 PM
+         Jul 8, 2021 05:15:41 PM
         </div> 
        </div> 
       </div> 
@@ -344,7 +385,7 @@
        <div class="card-panel r">
          Time Taken 
         <div class="panel-lead">
-         0h 0m 35s+386ms
+         0h 2m 18s+976ms
         </div> 
        </div> 
       </div> 
@@ -357,7 +398,7 @@
   <!-- container --> 
   <script>
 			var statusGroup = {
-				passParent: 4,
+				passParent: 5,
 				failParent: 0,
 				fatalParent: 0,
 				errorParent: 0,
@@ -365,14 +406,14 @@
 				skipParent: 0,
 				exceptionsParent: 0,
 				
-				passChild: 4,
+				passChild: 5,
 				failChild: 0,
 				fatalChild: 0,
 				errorChild: 0,
 				warningChild: 0,
 				skipChild: 0,
 				infoChild: 0,
-				exceptionsChild: 8,
+				exceptionsChild: 10,
 				
 				passGrandChild: 0,
 				failGrandChild: 0,
